<resources>
    <string name="app_name" translatable="false">Pizza Dough</string>
    <string name="title" translatable="false">PIZZA DOUGH</string>
    <string name="navigation_draw_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_draw_close" translatable="false">Close navigation drawer</string>
    <string name="portions">Dough balls</string>
    <string name="portion_weight">Dough Ball Weight (grams)</string>
    <string name="hydration">Hydration</string>
    <string name="initial_wight_portion" translatable="false">280</string>
    <string name="zero_num" translatable="false">0</string>
    <string name="zero_num_percentage" translatable="false">0%</string>
    <string name="zero_decimal" translatable="false">0.0</string>
    <string name="zero_decimal_percentage" translatable="false">0.0%</string>
    <string name="grams">grams</string>
    <string name="flour">Flour (grams)</string>
    <string name="water">Water (grams)</string>
    <string name="yeast">Yeast</string>
    <string name="yeast_grams">Yeast (grams)</string>
    <string name="salt">Salt</string>
    <string name="salt_grams">Salt (grams)</string>
    <string name="oil">Oil</string>
    <string name="oil_grams">Oil (grams)</string>
    <string name="calculate">CALCULATE</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1453187186238733/1858985384</string>
    <string name="toast_hydration_warning">Hydration must be greater than 0</string>
    <string name="toast_yeast_is">Yeast is : %.1f%%</string>
    <string name="toast_salt_is">Salt is : %.1f%%</string>
    <string name="toast_oil_is">Oil is : %.1f%%</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="send_recipe">Send recipe</string>
    <string name="save">Save</string>
    <string name="save_recipe">Save recipe</string>
    <string name="saved_recipes">Saved recipes</string>
    <string name="rate_app">Rate</string>
    <string name="toast_saving">Saving to %s</string>
    <string name="pizza_icon" translatable="false">pizza_icon</string>
    <string name="recipe_file_name">Recipe File Name</string>
    <string name="date_last_modified">Last modified date</string>
    <string name="toast_saving_warning">You can\'t save an empty recipe!</string>
    <string name="toast_send_warning">You can\'t send an empty recipe!</string>
    <string name="delete">Delete</string>
    <string name="required">*Required</string>
    <string name="recipe_name_required">Recipe name*</string>
    <string name="cancel">Cancel</string>
    <string name="loaded_recipe">Loaded recipe</string>
    <string name="remove_adds">Remove adds</string>
    <string name="about">About</string>
    <string name="other">Other</string>
    <string name="version_s">Version</string>
    <string name="content_description_delete">delete</string>
    <string name="content_description_save" translatable="false">save</string>
    <string name="content_description_send">send</string>
    <string name="contextual_one_item_selected">1 selected</string>
    <string name="imageview_contentdescription_logo" translatable="false">logo</string>
    <string name="version_n" translatable="false">v1.2.3</string>
    <string name="developer_name" translatable="false">Albert Ribas Admetlla</string>
    <string name="developer_website" translatable="false">www.aribasadmetlla.com</string>
    <string name="toast_portions_warning">Number of portions or portion weight can\'t be zero</string>
    <string name="toast_file_name_empty">File name can\'t be empty</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
</resources>
