<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_saved_recipes"
            android:icon="@drawable/ic_save_24dp"
            android:title="@string/saved_recipes" />
    </group>
    <group
        android:id="@+id/group_communicate"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle_communicate"
            android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/rate_app" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle_other"
            android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/nav_remove_ads"
                    android:icon="@drawable/ic_shopping_cart_24dp"
                    android:title="@string/remove_adds" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_24dp"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>