<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:id="@+id/pizzaIcon"
            android:src="@drawable/ic_pizza"
            android:contentDescription="@string/pizza_icon"/>

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pizzaIcon"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="false"
            android:text="@string/recipe_file_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_last_modified"
            android:layout_toEndOf="@+id/pizzaIcon"
            android:layout_below="@id/text_view_title"
            android:textAppearance="@style/TextAppearance.AppCompat"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>